# whoami-rocket

./: .env.example  Cargo.toml  README.md
src/: main.rs  rails_session_cookie.rs
